MODKBEKBJ-551 Upgrade to RMB v32.1 and Vert.X v4